devops/project/front/front-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exam-system-web
  namespace: exam-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: exam-system-web
  template:
    metadata:
      labels:
        app: exam-system-web
    spec:
      serviceAccountName: harbor-sa
      containers:
        - name: nginx
          image: harbor.shixiaochuang.org/exam-system/exam-system-web:v1
          ports:
            - containerPort: 80
