devops/project/front/front-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: exam-system-web
  namespace: exam-system
spec:
  type: ClusterIP
  selector:
    app: exam-system-web
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: exam-system
  namespace: exam-system
spec:
  gatewayClassName: traefik
  listeners:
    - name: web
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: exam-system-web
  namespace: exam-system
spec:
  parentRefs:
    - name: exam-system
      namespace: exam-system
  hostnames:
    - learning.shixiaochuang.org

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: exam-system-web
          port: 80
